<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/background"
    tools:context=".RealtimeActivity">

    <ListView
        android:id="@+id/list_pola"
        android:layout_width="fill_parent"
        android:layout_height="350dp" />

    <Button
        android:id="@+id/btnSpade"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/btn_transform"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:layout_gravity="center"
        android:textColor="#fff"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/minsupView"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/txMinsup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/minsupHint"
            android:paddingRight="10dp"
            android:inputType="numberDecimal"
            android:layout_gravity="center"
            android:textColor="#c6cad1"
            android:paddingEnd="10dp" />
        <Button
            android:id="@+id/btnInputMinsup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSpade"
            android:fontFamily="@font/lato_bold"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:layout_gravity="center"
            android:textColor="#fff"/>

    </LinearLayout>

</LinearLayout>